--- a/clash_royale_challenge_starter.ipynb
+++ b/clash_royale_challenge_starter.ipynb
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "DTV2GZ3z9TMa",
         "colab_type": "code",
-        "outputId": "fec29223-23a1-463f-91df-8b67216fbfd9",
+        "outputId": "eb753a2f-1996-47b6-97a7-a226da8682fc",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -87,15 +87,15 @@
       "source": [
         "uploaded = files.upload()"
       ],
-      "execution_count": 30,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-7b3cf559-7a1b-44de-8bb3-639b5308fb4c\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-7b3cf559-7a1b-44de-8bb3-639b5308fb4c\">\n",
+              "     <input type=\"file\" id=\"files-fee5d65d-74b4-4b27-b7ef-b83522cfbe28\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-fee5d65d-74b4-4b27-b7ef-b83522cfbe28\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -112,7 +112,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving nuSVM_50_no_weights.txt to nuSVM_50_no_weights (2).txt\n"
+            "Saving nuSVM_50_no_weights_best.txt to nuSVM_50_no_weights_best.txt\n"
           ],
           "name": "stdout"
         }
@@ -123,7 +123,7 @@
       "metadata": {
         "id": "FksFJ9Kf9PRN",
         "colab_type": "code",
-        "outputId": "b494b6ce-7635-4b46-ea5d-36a43da5a93e",
+        "outputId": "68d772aa-ae83-4187-963e-17107d53e817",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -136,7 +136,7 @@
         "valid = pd.read_csv('validationData.csv')\n",
         "train.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +220,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -364,7 +364,7 @@
       "metadata": {
         "id": "dFV7_sQb9PRW",
         "colab_type": "code",
-        "outputId": "f5875da6-1d8c-48ba-b899-93bc10a9b630",
+        "outputId": "64e1cefd-0109-4f69-ed83-4e4b21fa2e8f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -375,7 +375,7 @@
         "valid = to_bag_of_cards(valid)\n",
         "train.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1007,7 +1007,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -1323,6 +1323,109 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "dqxiqoUs2Auc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "score = train['nofGames']\n",
+        "train_sel_idx = np.where(score > np.percentile(score, 50))\n",
+        "train_sel = train.iloc[train_sel_idx]\n",
+        "\n",
+        "# ustalenie wag przykładów\n",
+        "p1 = np.percentile(score, 50)\n",
+        "med = np.median(score)\n",
+        "p2 = np.percentile(score, 80)\n",
+        "weights = np.array([0.2 if nof < p1 else 0.2+0.8*(nof-p1)/(p2-p1) if nof < p2 else 1 for nof in score])\n",
+        "#weights = np.array([1 if nof < p1 else 1-(nof-p1)/(p2-p1)*0.8 if nof < p2 else 0.2 for nof in score])\n",
+        "print('weights mean:', np.mean(weights[train_sel_idx]))\n",
+        "\n",
+        "r2s = []\n",
+        "decks = []\n",
+        "# parametry do sprawdzenia przez CV\n",
+        "param_grid = [\n",
+        "  {'C': [0.1, 0.5, 1.0, 2.0, 5.0, 10.0], 'gamma': [0.1/90, 0.5/90, 1.0/90, 2.0/90, 5.0/90, 10.0/90]},\n",
+        "]\n",
+        "results = []\n",
+        "epsilons = []\n",
+        "valid_decks = valid.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1)\n",
+        "  \n",
+        "for s in sizes:\n",
+        "  print('size:', s)\n",
+        "    \n",
+        "  # nuSVM  \n",
+        "  nu = s / train_sel.shape[0]\n",
+        "  nuSVM = NuSVR(kernel='rbf', gamma=10.0/90, C=0.1, nu=nu, shrinking=False)\n",
+        "  nuSVM.fit(train_sel.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1), train_sel['winRate'])\n",
+        "  #nuSVM.fit(train_sel.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1), train_sel['winRate'], sample_weight=weights[train_sel_idx])\n",
+        "  preds = nuSVM.predict(valid_decks)\n",
+        "  print('nu:', nu, 'R2:', R2(preds, valid['winRate']), 'SV:', len(nuSVM.support_))\n",
+        "  \n",
+        "  # ustalenie epsilona\n",
+        "  train_sv = train_sel.iloc[nuSVM.support_]\n",
+        "  preds_sv = nuSVM.predict(nuSVM.support_vectors_)\n",
+        "  eps = np.min(np.abs(preds_sv-train_sv['winRate'])) - 0.0001\n",
+        "  print('eps:', eps)\n",
+        "  \n",
+        "  # wzięcie wektorów nośnych o najwyższych współczynnikach \n",
+        "  svs = train_sel_idx[0][nuSVM.support_[np.argsort(np.abs(nuSVM.dual_coef_))[0,::-1]][:s]]\n",
+        "  #svs = train_sel_idx[0][nuSVM.support_[np.argsort(train_sv['nofGames'])[::-1]][:s]]\n",
+        "  train_fin = train.iloc[svs]\n",
+        "  \n",
+        "  # wagi wektorów nośnych\n",
+        "  #weights2 = weights[svs]\n",
+        "  #param_grid[0]['C'].append(np.mean(weights2))\n",
+        "  #print('weights2 mean:', np.mean(weights2))\n",
+        "  \n",
+        "  # grid search na trainie \n",
+        "  SVM = SVR(kernel='rbf', epsilon=eps, C = 1.0, gamma = 1.0/90, shrinking=False) \n",
+        "  #grid = GridSearchCV(cv=5, estimator=SVM, param_grid=param_grid, n_jobs=-1, iid=True, verbose=0)\n",
+        "  #grid.fit(train_fin.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1), train_fin['winRate'])\n",
+        "  #grid.fit(train_fin.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1), train_fin['winRate'], sample_weight=weights2)\n",
+        "  #SVM.C = grid.best_params_['C']\n",
+        "  #SVM.gamma = grid.best_params_['gamma']\n",
+        "  #print(grid.best_params_)\n",
+        "  \n",
+        "  # grid search na walidacyjnym\n",
+        "  bestR2 = -1000\n",
+        "  bestC = 0\n",
+        "  bestGamma = 0\n",
+        "  train_fin_decks = train_fin.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1)\n",
+        "  for cost in [0.05, 0.1, 0.2, 0.5, 1.0, 2.0, 5.0]:\n",
+        "    SVM.C = cost\n",
+        "    for gamma in [0.1/90, 0.5/90, 1.0/90, 2.0/90, 5.0/90, 10.0/90, 20.0/90, 50.0/90]:     \n",
+        "      SVM.gamma = gamma\n",
+        "      SVM.fit(train_fin_decks, train_fin['winRate'])\n",
+        "      preds = SVM.predict(valid_decks)\n",
+        "      r2 = R2(preds, valid['winRate'])\n",
+        "      if r2 > bestR2:\n",
+        "        bestR2 = r2\n",
+        "        bestC = cost\n",
+        "        bestGamma = gamma\n",
+        "  \n",
+        "  print('best C:', bestC, 'best gamma:', bestGamma)\n",
+        "  SVM.C = bestC\n",
+        "  SVM.gamma = bestGamma\n",
+        "  SVM.fit(train_fin_decks, train_fin['winRate'])\n",
+        "  preds_fin = SVM.predict(valid_decks)\n",
+        "  print('fin R2:', R2(preds_fin, valid['winRate']), 'fin SV:', len(SVM.support_))\n",
+        "  r2s.append(R2(preds_fin, valid['winRate']))\n",
+        "  decks.append(svs)\n",
+        "  ind_text = ','.join(map(str, svs+1))\n",
+        "  text = ';'.join([str(eps), str(bestC), str(bestGamma), ind_text])\n",
+        "  results.append(text)\n",
+        "  epsilons.append(eps)\n",
+        "  \n",
+        "  #param_grid[0]['C'].remove(np.mean(weights2))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "0peoD5O26Nv0",
         "colab_type": "code",
         "colab": {}
@@ -1447,108 +1550,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XXR7kr9coYHn",
+        "id": "tj0Xo5EeZItD",
         "colab_type": "code",
-        "outputId": "f79136d4-a980-4540-d76a-9db4e74859b3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 721
-        }
+        "colab": {}
       },
       "source": [
-        "from sklearn.model_selection import GridSearchCV\n",
-        "\n",
-        "train_sel = train[score > np.percentile(score, 50)]\n",
-        "r2s = []\n",
-        "decks = []\n",
-        "param_grid = [\n",
-        "  {'C': [0.1, 0.5, 1.0], 'gamma': [0.1/90, 0.5/90, 1.0/90]},\n",
-        "]\n",
-        "results = []\n",
-        "  \n",
-        "for s in sizes:\n",
-        "  print('size:', s)\n",
-        "    \n",
-        "  nu = s / train_sel.shape[0]\n",
-        "  nuSVM = NuSVR(kernel='rbf', gamma=1.0/90, C=1.0, nu=nu, shrinking=False)\n",
-        "  nuSVM.fit(train_sel.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1), train_sel['winRate'])\n",
-        "  preds = nuSVM.predict(valid.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1))\n",
-        "  print('nu:', nu, 'R2:', R2(preds, valid['winRate']), 'SV:', len(nuSVM.support_))\n",
-        "  \n",
-        "  train_sv = train_sel.iloc[nuSVM.support_]\n",
-        "  preds_sv = nuSVM.predict(nuSVM.support_vectors_)\n",
-        "  eps = np.min(np.abs(preds_sv-train_sv['winRate'])) - 0.0001\n",
-        "  print('eps:', eps)\n",
-        "  \n",
-        "  svs = nuSVM.support_[np.argsort(np.abs(nuSVM.dual_coef_))[0,::-1]][:s]\n",
-        "  #svs = nuSVM.support_[np.argsort(train_sv['nofGames'])[::-1]][:s]\n",
-        "  train_fin = train_sel.iloc[svs]\n",
-        "  \n",
-        "  SVM = SVR(kernel='rbf', epsilon=eps, C = 1.0, gamma = 1.0/90, shrinking=False)\n",
-        "  #grid = GridSearchCV(cv=5, estimator=SVM, param_grid=param_grid, n_jobs=-1, verbose=0)\n",
-        "  #grid.fit(train_fin.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1), train_fin['winRate'])\n",
-        "  #SVM.C = grid.best_params_['C']\n",
-        "  #SVM.gamma = grid.best_params_['gamma']\n",
-        "  #print(grid.best_params_)\n",
-        "  \n",
-        "  SVM.fit(train_fin.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1), train_fin['winRate'])\n",
-        "  preds_fin = SVM.predict(valid.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1))\n",
-        "  print('fin R2:', R2(preds_fin, valid['winRate']), 'fin SV:', len(SVM.support_))\n",
-        "  r2s.append(R2(preds_fin, valid['winRate']))\n",
-        "  decks.append(svs)\n",
-        "  ind_text = ','.join(map(str, svs))\n",
-        "  text = ';'.join([str(eps), '1.0', str(1.0 / 90), ind_text])\n",
-        "  results.append(text)"
+        "svs = SVM.support_[np.argsort(np.abs(SVM.dual_coef_))[0,::-1]][:600]\n",
+        "print(svs)\n",
+        "svs+=1\n",
+        "svs"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "size: 600\n",
-            "nu: 0.012025494047380446 R2: 0.1995104240832981 SV: 764\n",
-            "eps: 0.10276343954380178\n",
-            "fin R2: 0.18025149548964803 fin SV: 600\n",
-            "size: 700\n",
-            "nu: 0.014029743055277188 R2: 0.21003434100564233 SV: 889\n",
-            "eps: 0.09881775379962142\n",
-            "fin R2: 0.17782678383397488 fin SV: 698\n",
-            "size: 800\n",
-            "nu: 0.01603399206317393 R2: 0.21641666548546057 SV: 976\n",
-            "eps: 0.0961000477971347\n",
-            "fin R2: 0.196353099244034 fin SV: 800\n",
-            "size: 900\n",
-            "nu: 0.01803824107107067 R2: 0.22026055376470555 SV: 1097\n",
-            "eps: 0.09299050526589213\n",
-            "fin R2: 0.20043561038753044 fin SV: 898\n",
-            "size: 1000\n",
-            "nu: 0.020042490078967412 R2: 0.2206672739592107 SV: 1207\n",
-            "eps: 0.09068993450622213\n",
-            "fin R2: 0.21316742963946889 fin SV: 998\n",
-            "size: 1100\n",
-            "nu: 0.02204673908686415 R2: 0.22105534876325195 SV: 1321\n",
-            "eps: 0.0887670994460089\n",
-            "fin R2: 0.22066896271275505 fin SV: 1100\n",
-            "size: 1200\n",
-            "nu: 0.024050988094760892 R2: 0.22010269311365682 SV: 1457\n",
-            "eps: 0.08695306084461506\n",
-            "fin R2: 0.21583452041749496 fin SV: 1198\n",
-            "size: 1300\n",
-            "nu: 0.026055237102657634 R2: 0.2198033898447419 SV: 1562\n",
-            "eps: 0.08533353650618301\n",
-            "fin R2: 0.20858438214400388 fin SV: 1297\n",
-            "size: 1400\n",
-            "nu: 0.028059486110554376 R2: 0.21951602619232535 SV: 1671\n",
-            "eps: 0.08372397833864563\n",
-            "fin R2: 0.21495811601953985 fin SV: 1400\n",
-            "size: 1500\n",
-            "nu: 0.030063735118451115 R2: 0.22128355221957619 SV: 1772\n",
-            "eps: 0.08229159080539881\n",
-            "fin R2: 0.21556435523829487 fin SV: 1500\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1658,25 +1671,28 @@
       "metadata": {
         "id": "0JgMDFxW9PRo",
         "colab_type": "code",
-        "outputId": "cdd43229-d881-416d-cc26-fefc4d3eb593",
-        "colab": {}
+        "outputId": "09779884-9dc4-446b-87ca-cc82cfbbe6db",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        "np.mean(r2)"
+        "np.mean(r2s)"
       ],
-      "execution_count": 0,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.09042468163597647"
+              "0.2444155220458327"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 91
+          "execution_count": 31
         }
       ]
     },
@@ -1708,10 +1724,10 @@
         "colab": {}
       },
       "source": [
-        "with open('nuSVM_50_no_weights.txt', 'w') as f:\n",
+        "with open('nuSVM_50_no_weights_best.txt', 'w') as f:\n",
         "  for res in results:\n",
         "    f.write(res + '\\n')\n",
-        "files.download('nuSVM_50_no_weights.txt')"
+        "files.download('nuSVM_50_no_weights_best.txt')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1721,17 +1737,63 @@
       "metadata": {
         "id": "7ifdyxppA5kn",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "07185591-e364-42b3-d44f-8aa947e5b862",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        }
       },
       "source": [
-        "with open('nuSVM_50_no_weights.txt', 'r') as f:\n",
+        "# sprawdzenie, czy dane z pliku dają dobre wyniki\n",
+        "with open('nuSVM_50_no_weights_best.txt', 'r') as f:\n",
         "  lines = f.readlines()\n",
         "\n",
         "for line in lines:\n",
-        "  tmp = line.split(';')\n",
-        "  tmp = tmp[:3] + tmp[-1].split(',')\n",
-        "  print(tmp)\n",
-        "  print(len(tmp))\n"
+        "  data = line.split(';')\n",
+        "  SVM = SVR(kernel='rbf', epsilon=float(data[0]), C = float(data[1]), gamma = float(data[2]), shrinking=False)\n",
+        "  train_set = train.iloc[[int(idx)-1 for idx in data[-1].split(',')]]\n",
+        "  SVM.fit(train_set.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1), train_set['winRate'])\n",
+        "  preds = SVM.predict(valid.drop(['deck', 'nofGames', 'nOfPlayers', 'winRate'], axis=1))\n",
+        "  print('R2:', R2(preds, valid['winRate']), 'SV:', len(SVM.support_))"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "R2: 0.22628731663683355 SV: 600\n",
+            "R2: 0.23229101588650702 SV: 699\n",
+            "R2: 0.23946813027526104 SV: 798\n",
+            "R2: 0.24804856351009374 SV: 898\n",
+            "R2: 0.24741949229557558 SV: 998\n",
+            "R2: 0.2473995434311762 SV: 1100\n",
+            "R2: 0.24893867910439804 SV: 1200\n",
+            "R2: 0.24830393638845938 SV: 1300\n",
+            "R2: 0.2525457887777156 SV: 1399\n",
+            "R2: 0.2534527541523067 SV: 1500\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G5X1dBv9VwhK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# dodanie 1 do indeksów w pliku\n",
+        "with open('nuSVM_50_no_weights.txt', 'r') as f:\n",
+        "  lines = f.readlines()\n",
+        "\n",
+        "with open('nuSVM_50_no_weights2.txt', 'w') as f:\n",
+        "  for line in lines:\n",
+        "    data = line.split(';')\n",
+        "    data[-1] = ','.join([str(int(idx)+1) for idx in data[-1].split(',')])\n",
+        "    f.write(';'.join(data)+'\\n')\n",
+        "files.download('nuSVM_50_no_weights2.txt')"
       ],
       "execution_count": 0,
       "outputs": []
